# ifm3d

./: CMakeLists.txt  ChangeLog.md
cmake/modules/: FindXMLRPC.cmake  ifm3d-config.cmake.in
doc/: swcompat.md  windows_vcpkg.md
modules/camera/src/libifm3d_camera/: CMakeLists.txt  camera.cpp
modules/examples/: CMakeLists.txt  ex-leak-check.cpp
modules/pybind11/: CMakeLists.txt
modules/pybind11/src/: CMakeLists.txt  main.cpp  util.hpp
modules/pybind11/test/: test_ifm3d_camera_camera.py  test_ifm3d_camera_version.py
snap/: snapcraft.yaml
